# swashes

./: README.md  README.rst  appveyor.yml  travis.yml
.circleci/: config.yml
ci-tools/: anaconda-upload.py
recipe/: CMakeLists.txt  bld.bat  build.sh  meta.yaml  swashes.patch
